# Basin

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.collector  Dockerfile.webhook  README.md  crontab  docker-compose.yml  pyproject.toml
cli/: health.py
collectors/: base.py  healthkit.py  hevy.py  intervals_icu.py  nasdaq.py  schwab.py  strava.py  teller.py
docs/superpowers/plans/: 2026-03-28-basin-implementation.md  2026-03-28-fitness-dashboard.md  2026-03-29-finance-dashboard.md  2026-03-29-strength-panel-redesign.md
docs/superpowers/specs/: 2026-03-28-basin-data-aggregator-design.md  2026-03-28-fitness-dashboard-design.md  2026-03-29-strength-panel-redesign.md
migrations/: 001_initial.sql  002_investments.sql  002a_investments_seed.sql  003_intervals_icu.sql  004_strava.sql  004a_strava_splits.sql  005_teller_tokens.sql
scripts/: backup.sh  basin.service  bootstrap-vm.sh  sync-health.sh
shared/: config.py  db.py  telegram.py
tasks/: investment-tracker-plan.md
tests/: conftest.py  test_base_collector.py  test_cli.py  test_dashboard.py  test_db.py  test_finance.py  test_healthkit_webhook.py  test_healthkit_xml.py  test_hevy.py  test_schwab.py  test_teller.py
webhook/: dashboard.html  dashboard.py  dashboard_shared.py  finance.html  finance.py  investments.html  investments.py  ops.html  ops.py  server.py  strava.py  teller.py
webhook/static/: manifest.json  sw.js
